<resources>
    <string name="app_name">Climbing Coach</string>
    <string name="hello_world">Hello World</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="continue_to_equipment">Continue to Equipment Selection</string>
    <string name="continue_to_start_date">Continue to Program Date Selection</string>
    <string name="accept_start_date">Accept Start Date</string>
    <string name="accept_end_date">Accept End Date</string>
    <string name="done">Done</string>
    <string name="reps">Reps: </string>
    <string name="sets">Sets: </string>
    <string name="equip">Equipment: </string>
    <string name="diff">Minimum Grade Range to be in Program: </string>
    <string name="rest">Rest: </string>
    <string name="type">Drill Type: </string>
    <string name="time">Time Allotted: </string>
    <string name="home">Cancel and Return to Home</string>
    <string name="create_program">Generate your Program</string>
    <string name="name_prompt">Name your training program...</string>
    <string name="name_error">Letters and spaces only, up to 20 characters</string>
    <string name="program_error">Once you create a program, it will appear here.</string>
    <string name="check_box_help">Once you check every exercise on a day, this will be checked off too.</string>
    <string name="generate">Generating Your Program!</string>
    <string name="action_home">Home</string>
    <string name="plus_rep">+rep</string>
    <string name="plus_set">+set</string>
    <string name="down_rep">-rep</string>
    <string name="down_set">-set</string>
    <string name="enter_sets">Enter Sets...</string>
    <string name="enter_reps">Enter Reps...</string>
    <string name="enter_name">Enter Name...</string>
    <string name="enter_description">Enter Description...</string>
    <string name="enter_rest">Enter Rest Description...</string>
    <string name="no_results">No Results Found</string>
    <string name="search_message">Search is not case sensitive, and is affected by your current filter selection (Strength, Power, ect).
        "View All" shows the complete exercise list again.</string>
    <string name="search">Search</string>
    <string name="zero">0</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="Start">Start</string>
    <string name="zero_time">00:00:0</string>
    <string name="na">N/A</string>
    <string name="empty_description">When you view an exercise, you can navigate to here with the clock button on the action bar. The description and goals for sets/reps will be filled in with that exercises information.</string>
    <string name="replace_warning">"You may replace this one exercise with another. Or, replace EVERY instance of this exercise with another.\n\nWarning: You have the freedom to select any exercise. This may cause your training sessions to be of a different length. You may also have the exercise twice in one day, if it was already selected."</string>
    <string name="help_view_dates_exercises">Press and hold on an exercise to replace every instance of it with another.</string>
    <string name="help_message_title">Help Message</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="action_hideCompleted">Hide/Show Completed</string>
    <string name="exercise_database">View Exercises</string>
    <string name="load_program">Load Program </string>
    <string name="training_tips">Training Tips</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="about_the_author">About the Author</string>
    <string name="new_program">Build New Program</string>
    <string name="program_segments">Program Segments</string>
    <string name="volume_only">Volume Only</string>
    <string name="strpow_only">Strength and Power Only</string>
    <string name="powend_only">Power Endurance Only</string>
    <string name="end_only">Route Endurance Only</string>
    <string name="full_programs">Complete Programs</string>
    <string name="bouldering_program">Bouldering Program</string>
    <string name="routes_program">Routes Program</string>
    <string name="hide_completed">Hide Completed Days</string>
    <string name="filter_text">Filter Exercises:</string>
    <string-array name="program_types">
        <item>Volume Only</item>
        <item>Strength and Power Only</item>
        <item>Power Endurance Only</item>
        <item>Route Endurance Only</item>
        <item>Bouldering Program</item>
        <item>Routes Program</item>
    </string-array>
    <string-array name="types_strings">
        <item>Strength</item>
        <item>Power</item>
        <item>Power Endurance</item>
        <item>Endurance</item>
        <item>Conditioning</item>
        <item>Volume</item>
        <item>All</item>
    </string-array>
    <string name="PWR">PWR</string>
    <string name="STR">STR</string>
    <string name="POW">POW</string>
    <string name="VOL">VOL</string>
    <string name="ALL">ALL</string>
    <string name="END">END</string>
    <string name="CON">CON</string>
    <string name="PWREND">PWR-END</string>
    <string-array name="time_strings">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
    </string-array>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="days_select">Select the Days You Climb...</string>
    <string name="select_commitment">Select Commitment Level</string>
    <string-array name="commitment_levels">
        <item>Select Commitment Level...</item>
        <item>Moderate</item>
        <item>Dedicated</item>
    </string-array>
    <string-array name="grades">
        <item>Select Current Grade Range...</item>
        <item>[5.10d or V0 and below]</item>
        <item>[5.11a to 5.11d] or [V1 to V3]</item>
        <item>[5.12a to 5.12d] or [V4 to V6]</item>
        <item>[5.13a to 5.13d] or [V7 to V9]</item>
        <item>[5.14a or V10 and above]</item>
    </string-array>
    <string-array name="sessions_per_week">
        <item>Select Current Sessions Per Week...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="session_durations">
        <item>Select Typical Session Duration...</item>
        <item>1 hour</item>
        <item>1.5h hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
        <item>3.5 hours</item>
        <item>4 hours</item>
    </string-array>
    <string name="select_grade_range">Current Grade Range</string>
    <string name="select_sessions_per_week">Current Sessions Per Week</string>
    <string name="select_session_length">Typical Session Duration</string>
    <string name="select_equipment">Equipment You Have Access To</string>
    <string name="equipment_toast">A pull-up bar and hangboard are the minimum required for program creation.</string>
    <string-array name="equipment">
        <item>Pull Up Bar</item>
        <item>Hangboard</item>
        <item>Campus Board</item>
        <item>Lead or Toprope</item>
        <item>Small Freeweights</item>
        <item>Kettle Bells</item>
        <item>Rings</item>
        <item>Moonboard</item>
        <item>Medicine Balls</item>
        <item>Therabands</item>
        <item>Angle-Adjustable Wall</item>
    </string-array>
    <string-array name="review_segments">
        <item>Program Type: </item>
        <item>Hours Per Session: </item>
        <item>Days Per Week: </item>
        <item>Commitment Level: </item>
        <item>Grade Range: </item>
        <item>Program Start Date: </item>
        <item>Program End Date: </item>
        <item>Equipment Available: </item>
    </string-array>
    <string name="bio_goes_here">bio goes here</string>
    <string name="about_the_author_text">My name is Miles Adamson. I started climbing when I was 6 years old,
        and am 25 now. From the age of 8 onwards, I competed in the Canadian climbing youth circuit.
        During this time I trained on a junior team at the University of Alberta climbing wall. I won Canadian Nationals
        3 times in lead. This was before youth climbers had a bouldering circuit, so I also competed in the adult bouldering
        competitions. At 21, I won Canadian Bouldering Nationals hosted in Edmonton, Alberta.\n\nFrom then on, I
        started to move away from competitions and more on to rock. I did my degree in electrical engineering at
        the British Columbia Institute of Technology. Being only an hour from Squamish, I went there constantly.
        Often I would bring my school work to the boulders, to work while I rested. In Squamish, I got into highball
        bouldering. During my degree I had climbed virtually every highball in Squamish, along with the majority of
        the classic lines. I had been to every area so many times that I started to explore more remote and obscure areas.
        I found many new highball lines, some of which are on the "Top 25 Highballs" list. I wrote the Top 25 Highball list
        for the 3rd edition of Squamish Bouldering.\n\nAfter my degree, I moved back to Edmonton to work as an engineer.
        Edmonton is relatively close to Canmore, where there is one of Canada\'s hardest sport climbs, Honour and Glory 14d.
        During that summer, Adam Ondra came to try to flash the route. He reached out to me for beta, and his
        attempt was featured in Reel Rock 13. I was very happy to have a brief cameo in the film, and later send the route myself.
        During the long hike to the Colisseum, I had a ton of time to talk to Adam about training, projecting and climbing.\n\n
        Much of what I learned is applied in this app, which I hope you find useful in your journey!
    </string>
    <string name="tip_volume_name">Volume Training</string>
    <string name="tip_power_name">Power Training</string>
    <string name="tip_strength_name">Strength Training</string>
    <string name="tip_powerEnd_name">Power Endurance Training</string>
    <string name="tip_endurance_name">Endurance Training</string>
    <string name="tip_fast_lead_laps_name">Fast Lead Laps - Don\'t Un-tie</string>
    <string name="tip_minimum_grade_name">Grades Ranges for Exercises</string>
    <string name="tip_boulder_for_routes_name">Bouldering for Route Climbing?</string>
    <string name="title_activity_build_new_program_type_duration">Program Type</string>
    <string name="title_activity_build_new_program_about_you">About You</string>
    <string name="title_activity_build_new_program_equipment">Equipment Available</string>
    <string name="title_activity_build_new_program_details">Choose Start Date</string>
    <string name="title_activity_build_new_program_review">Create Program</string>
    <string name="title_activity_add_exercise">Add Exercise</string>
</resources>