<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.adamson.miles.climbingtrainer.ExerciseList">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help_white"
        android:orderInCategory="100"
        android:title="@string/help_message_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:title="@string/title_activity_add_exercise"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="always" />
</menu>
