<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.adamson.miles.climbingtrainer.MainActivity">

    <!-- view for AdMob Banner Ad -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/polygon_grey"
        android:orientation="vertical">

        <LinearLayout style="@style/LayoutHorizontalTransparent">
            <Button
                android:id="@+id/buttonBuildNewProgram"
                style="@style/ButtonWhite"
                android:background="@drawable/gradient_red"
                android:text="@string/new_program" />
            <ImageButton
                android:id="@+id/imageBuildNewProgram"
                style="@style/ButtonImageSmall"
                android:background="@drawable/gradient_red"
                ads:srcCompat="@drawable/ic_new_program" />

        </LinearLayout>

        <LinearLayout style="@style/LayoutHorizontalTransparent">
            <Button
                android:id="@+id/buttonLoadProgram"
                style="@style/ButtonWhite"
                android:background="@drawable/gradient_indigo"
                android:text="@string/load_program" />
            <ImageButton
                android:id="@+id/imageLoadProgram"
                style="@style/ButtonImageSmall"
                android:background="@drawable/gradient_indigo"
                ads:srcCompat="@drawable/ic_load_program" />
        </LinearLayout>

        <LinearLayout style="@style/LayoutHorizontalTransparent">
            <Button
                android:id="@+id/buttonExercises"
                style="@style/ButtonWhite"
                android:background="@drawable/gradient_yellow"
                android:text="@string/exercise_database" />
            <ImageButton
                android:id="@+id/imageExercises"
                style="@style/ButtonImageSmall"
                android:background="@drawable/gradient_yellow"
                ads:srcCompat="@drawable/ic_exercises" />
        </LinearLayout>

        <LinearLayout style="@style/LayoutHorizontalTransparent">
            <Button
                android:id="@+id/buttonTrainingTips"
                style="@style/ButtonWhite"
                android:background="@drawable/gradient_blue"
                android:text="@string/training_tips" />
            <ImageButton
                android:id="@+id/imageTips"
                style="@style/ButtonImageSmall"
                android:background="@drawable/gradient_blue"
                ads:srcCompat="@drawable/ic_tips" />
        </LinearLayout>

        <LinearLayout style="@style/LayoutHorizontalTransparent">
            <Button
                android:id="@+id/buttonAboutTheAuthor"
                style="@style/ButtonWhite"
                android:background="@drawable/gradient_orange"
                android:text="@string/about_the_author" />
            <ImageButton
                android:id="@+id/imageAboutTheAuthor"
                style="@style/ButtonImageSmall"
                android:background="@drawable/gradient_orange"
                ads:srcCompat="@drawable/ic_about" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
